# keymouse

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  config.toml  keymouse
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: cargo-safe.ps1  cargo-safe.sh
src/: app_bundle.rs  config.rs  input.rs  launch_agent.rs  main.rs  menubar.rs  overlay.rs  platform.rs  process_control.rs  runtime.rs
src/grid/: bounds.rs  mod.rs  recursive.rs
src/runtime/: macos.rs  mod.rs  windows.rs
