[package]
name = "keymouse"
version = "0.1.3"
edition = "2024"
description = "Control your mouse using Vim-style keyboard navigation"
license = "MIT"
repository = "https://github.com/debacodes10/keymouse"
homepage = "https://github.com/debacodes10/keymouse"
readme = "README.md"
keywords = ["mouse", "keyboard", "vim", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
enigo = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
